# faldoi-ipol

./: .gitignore  README.md  recompile_changes.sh
LICENSE.md/: LICENSE.md
example_data/: README.txt  frames_I0-I1-I_1-I2.txt  large_displacements_seq_2.txt  sintel_few_seeds_ambush_4_second.txt  sintel_few_seeds_market_5.txt  sintel_one_frame.txt  sintel_one_frame_medium.txt  sintel_subset_final.txt
example_data/Middlebury/: compute_middlebury.sh  dimetrodon.txt  grove2.txt  grove3.txt  hydrangea.txt  rubberwhale.txt  urban2.txt  urban3.txt  venus.txt
example_data/alley_2_clean/: alley2_clean.txt
example_data/alley_2_clean/gt/: frame_0002.flo
example_data/clean/: sintel_one_frame_easy.txt  sintel_one_frame_hard.txt  sintel_one_frame_medium.txt
example_data/clean/easy/: README.txt
example_data/dm_vs_sift/: difficult_sift.txt  easy_sift.txt
example_data/faldoi_functionals_comparison/: compare_functionals.txt
example_data/few_seeds/: sintel_few_seeds_ambush_2.txt  sintel_few_seeds_ambush_4_seq1.txt  sintel_few_seeds_temple_3.txt
example_data/final/: sintel_one_frame_hard.txt  sintel_one_frame_medium.txt
example_data/hypermacaco_last/: hf.flo  hm_final.txt
example_data/iterated_faldoi_evol_and_final_flow/: iterated_faldoi.txt
example_data/large_displacement/: hypermacaco.txt  large_displacements_hypermaco.txt  large_displacements_seq_1.txt
ext_bin/: README.txt  sift_cli
scripts_python/: README.txt  auxiliar_faldoi_functions.py  faldoi_deep.py  faldoi_deep_occ.py  faldoi_deep_occ_v2.py  faldoi_sift.py  fast_faldoi.py  fast_faldoi_occ.py  fast_sift.py  rescore_prunning.py  show_outliers.sh  tests_robustness_epsilon.sh  utils.py
src/: CMakeLists.txt  Makefile  aux_energy_model.cpp  aux_energy_model.h  aux_partitions.cpp  aux_partitions.h  bicubic_interpolation.c  bicubic_interpolation.h  elap_recsep.c  elap_recsep.h  energy_model.cpp  energy_model.h  energy_structures.h  evaluate_energy.cpp  faldoi.cpp  global_faldoi.cpp  heuristic_interpolation.cpp  heuristic_interpolation.h  iio.c  iio.h  local_faldoi.cpp  mask.c  mask.h  nltv_model.cpp  nltv_model.h  nltvcsad_model.cpp  nltvcsad_model.h  nltvcsadw_model.cpp  nltvcsadw_model.h  nltvw_model.cpp  nltvw_model.h  parameters.h  sparse_flow.cpp  tvcsad_model.cpp  tvcsad_model.h  tvcsadw_model.cpp  tvcsadw_model.h  tvl2_model.cpp  tvl2_model.h  tvl2_model_occ.cpp  (+11 more)
src/lib/: png.h
(+25 files in other folders)
